[package]
name = "bytestring"
version = "1.5.0"
description = "A UTF-8 encoded read-only string using `Bytes` as storage"
authors = ["Nikolay Kim <fafhrd91@gmail.com>", "Rob Ede <robjtede@icloud.com>"]
keywords = ["string", "bytes", "utf8", "web", "bytestring"]
categories = ["no-std", "web-programming"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net"
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = ["bytes::*", "serde::*"]

[features]
serde = ["dep:serde_core"]

[dependencies]
bytes = { version = "1.2", default-features = false }
serde_core = { version = "1", optional = true }

[dev-dependencies]
ahash = { version = "0.8", default-features = false }
serde_json = "1"
static_assertions = "1.1"

[lints]
workspace = true
