[package]
name = "local-channel"
version = "0.1.3"
description = "A non-threadsafe multi-producer, single-consumer, futures-aware, FIFO queue"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
repository = "https://github.com/actix/actix-net.git"
keywords = ["channel", "local", "futures"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
futures-core = "0.3.17"
futures-sink = "0.3.17"
futures-util = { version = "0.3.17", default-features = false }
local-waker = "0.1"

[dev-dependencies]
tokio = { version = "1.23.1", features = ["rt", "macros"] }
