[package]
name = "local-channel"
version = "0.1.5"
description = "A non-threadsafe multi-producer, single-consumer, futures-aware, FIFO queue"
authors = ["Nikolay Kim <fafhrd91@gmail.com>", "Rob Ede <robjtede@icloud.com>"]
repository = "https://github.com/actix/actix-net"
keywords = ["channel", "local", "futures"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = ["futures_core::*", "futures_sink::*"]

[dependencies]
futures-core = "0.3.17"
futures-sink = "0.3.17"
local-waker = "0.1"

[dev-dependencies]
futures-util = { version = "0.3.17", default-features = false }
tokio = { version = "1.23.1", features = ["rt", "macros"] }
