[package]
name = "local-waker"
version = "0.1.3"
description = "A synchronization primitive for thread-local task wakeup"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
repository = "https://github.com/actix/actix-net.git"
keywords = ["waker", "local", "futures", "no-std"]
categories = ["asynchronous", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
