[package]
name = "local-waker"
version = "0.1.4"
description = "A synchronization primitive for thread-local task wakeup"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
repository = "https://github.com/actix/actix-net"
keywords = ["waker", "local", "futures", "no-std"]
categories = ["asynchronous", "no-std"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
