[package]
name = "actix-router"
version = "0.2.5"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Resource path matching library"
keywords = ["actix"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-router/"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "actix_router"
path = "src/lib.rs"

[features]
default = ["http"]

[dependencies]
regex = "1.3.1"
serde = "1.0.104"
bytestring = "0.1.2"
log = "0.4.8"
http = { version = "0.2.0", optional = true }

[dev-dependencies]
http = "0.2.0"
serde_derive = "1.0"
