[package]
name = "bytestring"
version = "0.1.5"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "A UTF-8 encoded string with Bytes as a storage"
keywords = ["actix"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/bytestring/"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "bytestring"
path = "src/lib.rs"

[dependencies]
bytes = "0.5.3"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"